--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "framer-motion": "^6.3.0",
     "graphql": "^16.5.0",
     "next": "latest",
+    "next-urql": "^3.3.3",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "urql": "^2.2.2"
+    "react-is": "^18.2.0",
+    "urql": "^2.2.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.8.1",
