--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-react-app": "^7.0.1",
